[build-system]
requires = ["setuptools>=61.0.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "etiket_sync_agent"
description = ""
authors = [{name = "QHarbor team"}]
requires-python = ">=3.9"
dynamic = ["version"]

dependencies = [
]

[project.optional-dependencies]
test = [
    "pytest>=8.0", # Use a recent version
]

[tool.setuptools]
packages = ["etiket_sync_agent"]

[tool.setuptools.dynamic]
version = {attr = "etiket_sync_agent.__version__"}

[tool.pytest.ini_options]
# Add command line options here, e.g.:
# addopts = "-rsx -v"
pythonpath = [
  "."
]
testpaths = [
    "tests",
]